scrollbar fix and hover only after lg screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,7 +126,3 @@ body::before {
   background-color: white;
   pointer-events: none;
 }
-
-.fixed-gap {
-  gap: 1rem !important;
-}
